# VRCSugerChecker

./: .gitignore  AUDIO_RECORDING.md  BUILD_GUIDE.md  CLAUDE.md  DEVELOPMENT.md  README.md  VRChatSugarChecker.spec  build.bat  build.sh  build_native.bat  config.example.json  main.py  pyproject.toml  run_silent.vbs  setup_native.py  test_native_extension.py  test_openai_connection.py  test_whisper_api.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: release.yml
docs/: AVATAR_DETECTION.md  BUILD_GUIDE.md  DEVELOPMENT_LOG.md  RELEASE_GUIDE.md
installer/: VRChatSugarChecker.spec  installer.iss
scripts/: build.bat  build.sh  build_installer.bat  install_startup.ps1  run_silent.vbs  uninstall_startup.ps1
src/: main.py  test_image_analysis.py
src/modules/: time_tracker.py
src/modules/ai/: __init__.py  audio_analyzer.py  image_analyzer.py
src/modules/audio/: __init__.py  audio_preprocessor.py  recorder.py  wasapi_process_loopback.py  wasapi_process_loopback_native.cpp
src/modules/discord/: __init__.py  bot.py  vrchat_audio_source.py  webhook.py
src/modules/screenshot/: avatar_detector.py  avatar_presence_detector.py  capture.py
src/modules/upload/: __init__.py  uploader.py
src/modules/vrc/: parse_logs.py
src/modules/vsc_discord/: bot.py  vrchat_audio_source.py  webhook.py
submodules/audio/: recorder.py
submodules/discord/: webhook.py
submodules/screenshot/: __init__.py  capture.py
submodules/vrc/: parse_logs.py
upload_temp/: .gitignore
