[project]
name = "vrcsugerchecker"
version = "0.1.0"
description = "vrc suger checker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "requests>=2.32.5",
    "pywin32>=308; sys_platform == 'win32'",
    "pillow>=10.0.0",
    "openai>=1.0.0",
    "pyinstaller>=6.0.0",
]

[tool.uv]
environments = ["sys_platform == 'win32'", "sys_platform == 'linux'"]
